--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,36 +1,25 @@
 [
     {
         "id": 1,
-        "img": "/images/journeylondon.png",
-        "imgmobile": "/images/journeylondonmobile.png",
-        "url": "https://journey-london.vercel.app",
-        "title": "Journey London"
+        "img": "/images/gympower.png",
+        "imgmobile": "/images/gympower.png",
+        "url": "https://gympower25.vercel.app/",
+        "title": "Gym power",
+        "text": "Sitio de un gimnasio"
     },
     {
         "id": 2,
         "img": "/images/skullmaster.png",
         "imgmobile": "/images/skullmaster-mobile.png",
         "url": "https://skull-master.vercel.app/",
-        "title": "Skull Master"
+        "title": "Skull Master",
+        "text": "Sitio web de un estudio de tatuajes"
     },
     {
         "id": 3,
-        "img": "/images/threedays.png",
-        "imgmobile": "/images/threedays-mobile.png",
-        "url": "https://three-days-grace.vercel.app/"
-    },
-    {
-        "id": 4,
-        "img": "/images/bz.png",
-        "imgmobile": "/images/bzmobile.png",
-        "url": "https://basket-zone.vercel.app",
-        "title": "Basket Zone"
-    },
-    {
-        "id": 5,
-        "img": "/images/ktw.png",
-        "imgmobile": "/images/ktw-mobile.png",
-        "url": "https://know-the-world-three.vercel.app/",
-        "title": "Know the world"
+        "img": "./images/cafedlc.png",
+        "url": "https://albeerc.github.io/coffee-shop/",
+        "title": "Café de la casa",
+        "text": "Sitio de una cafetería con el menú"
     }
 ]
