--- a/public/data/projects.json
+++ b/public/data/projects.json
@@ -1,6 +1,13 @@
 [
     {
         "id": 1,
+        "img": "./images/dublin.png",
+        "url": "https://dublin-f482a.web.app/",
+        "title": "Dublín",
+        "text": "Restaurante con menú administrable desde un panel y sistema de reservas"
+    },
+    {
+        "id": 2,
         "img": "/images/gympower.png",
         "imgmobile": "/images/gympower.png",
         "url": "https://gympower25.vercel.app/",
@@ -8,7 +15,7 @@
         "text": "Sitio de un gimnasio con información básica de lugar"
     },
     {
-        "id": 2,
+        "id": 3,
         "img": "/images/skullmaster.png",
         "imgmobile": "/images/skullmaster-mobile.png",
         "url": "https://skull-master.vercel.app/",
@@ -16,17 +23,24 @@
         "text": "Sitio web de un estudio de tatuajes con formulario para consultas"
     },
     {
-        "id": 3,
+        "id": 4,
+        "img": "./images/bz.png",
+        "url": "https://basket-zone.vercel.app/",
+        "title": "Basket Zone",
+        "text": "E-commerce de camisetas de basquet con autenticación de usuarios, carrito, lista de favoritos, filtros y más"
+    },
+    {
+        "id": 5,
         "img": "./images/cafedlc.png",
         "url": "https://albeerc.github.io/coffee-shop/",
         "title": "Café de la casa",
         "text": "Sitio de una cafetería con el menú"
     },
     {
-        "id": 4,
-        "img": "./images/dublin.png",
-        "url": "https://dublin-f482a.web.app/",
-        "title": "Dublín",
-        "text": "Restaurante con menú administrable desde un panel y sistema de reservas"
+        "id": 6,
+        "img": "./images/tdg.png",
+        "url": "https://three-days-grace.vercel.app/",
+        "title": "Three Days Grace",
+        "text": "Ejemplo de sitio web de una banda con noticias, redes e información sobre la banda"
     }
 ]
