--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-loader-spinner": "^6.1.0",
     "react-router-dom": "^6.19.0",
     "react-scroll": "^1.9.0",
+    "react-vertical-timeline-component": "^3.5.3",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
