--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^6.1.0",
     "react-router-dom": "^6.19.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scroll": "^1.9.0",
     "react-vertical-timeline-component": "^3.5.3",
     "swiper": "^11.0.5"
